# Gemini-Agent

./: README.md  api_keys.json  e2e-to-do.md  generate_key.py  pyrightconfig.json  requirements.txt  simple_test.py  test_agent_functionality.py  test_fixes.py
agents/: README.md  agent_base.py  codegen_agent.py  doc_agent.py  fix_agent.py  planner_agent.py  qa_agent.py  test_agent.py
config/: README.md  security_policies.yaml  workflows.json
e2e/: build_tests_from_scenarios.py
e2e/scenarios/: scenario_02_ws_minimal.json  scenario_03_ws_full_ping.json  scenario_04_rest_health_min.json  scenario_13_ws_sequential_duo.json  (+2 more)
frontend/: README.md  index.html
scripts/: Update-E2EAutoMetrics.ps1  Update-E2ETodo.ps1
src/: README.md  async_file_manager.py  async_validator.py  backend_server.py  config_manager.py  error_handling.py  gdrive_integration.py  orchestrator.py  pyproject.toml  rule_engine.py  secure_secrets.py  security_manager.py  telemetry.py  websocket_manager.py  windsurf_integration.py
test/: add-security-testing.py  automated_test_harness.py  basic_test_client.py  conftest.py  kill_ports.ps1  plugin.py  requirements-test.txt  security_test_scenario_generator.py  test_client.py  test_logging.py  test_scenario_generator.py  test_scenarios.json
utils/: GeminiCodebaseIndexer.xml  agent_compliance_check.py  audit_agents.py  build.ps1  code_integrity_check.py  codebase_indexer.py  create_dependency_reports.py  dependency_graph.py  diag.py  find_circular_dependencies.py  prompt_check.py  run_indexer.ps1  scan_extensions.py  setup_indexer_task.ps1
(+52 files in other folders)
